--- a/SumrovDevelopment.styles.css
+++ b/SumrovDevelopment.styles.css
@@ -178,25 +178,25 @@
     top: 0;
     left: 0;
 }
-/* /Components/Presentation.razor.rz.scp.css */
+/* /Components/YS.razor.rz.scp.css */
 /* Стили для текста */
-.text-white[b-yf5ng1mg4a] {
+.text-white[b-m6i2osje8o] {
     color: #fff; /* Белый цвет текста */
 }
 
 /* Применение стандартного шрифта Bootstrap */
-body[b-yf5ng1mg4a] {
+body[b-m6i2osje8o] {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
 /* Дополнительные стили для lead класса */
-.lead[b-yf5ng1mg4a] {
+.lead[b-m6i2osje8o] {
     font-size: 1.25rem; /* Размер шрифта, измените по вашему усмотрению */
     font-weight: 400; /* Нормальная жирность шрифта */
 }
 
 /* Основной фон для секции */
-.background-blur[b-yf5ng1mg4a] {
+.background-blur[b-m6i2osje8o] {
     position: absolute;
     top: 0;
     left: 0;
@@ -209,7 +209,7 @@ body[b-yf5ng1mg4a] {
 }
 
     /* Псевдо-элемент для темного налета */
-    .background-blur[b-yf5ng1mg4a]::before {
+    .background-blur[b-m6i2osje8o]::before {
         content: "";
         position: absolute;
         top: 0;
@@ -221,13 +221,13 @@ body[b-yf5ng1mg4a] {
     }
 
 /* Контейнер для контента */
-.content[b-yf5ng1mg4a] {
+.content[b-m6i2osje8o] {
     position: relative;
     z-index: 1;
     width: 100%;
 }
 
-.circle-image[b-yf5ng1mg4a] {
+.circle-image[b-m6i2osje8o] {
     width: 150px;
     height: 150px;
     border-radius: 5px; /* Скругленные углы */
@@ -235,42 +235,42 @@ body[b-yf5ng1mg4a] {
     position: relative; /* Для смещения изображений */
 }
 
-.img-1[b-yf5ng1mg4a] {
+.img-1[b-m6i2osje8o] {
     top: -10px;
     left: 100px;
     width: 150px;
     height: 150px;
 }
 
-.img-2[b-yf5ng1mg4a] {
+.img-2[b-m6i2osje8o] {
     top: 15px;
     left: -10px;
     width: 200px;
     height: 200px;
 }
 
-.img-3[b-yf5ng1mg4a] {
+.img-3[b-m6i2osje8o] {
     top: 20px;
     left: 110px;
     width: 150px;
     height: 150px;
 }
 
-.img-4[b-yf5ng1mg4a] {
+.img-4[b-m6i2osje8o] {
     top: -20px;
     right: 150px;
     width: 150px;
     height: 150px;
 }
 
-.img-5[b-yf5ng1mg4a] {
+.img-5[b-m6i2osje8o] {
     top: -15px;
     right: 10px;
     width: 200px;
     height: 200px;
 }
 
-.img-6[b-yf5ng1mg4a] {
+.img-6[b-m6i2osje8o] {
     top: 5px;
     right: 100px;
     width: 150px;
